package YccSenaoOOP;

public interface Task {
	public void execute(Config cfg, Schedule sche);
}
